# d3d12_learn

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cxx  vcpkg.json
asset/shader/: Texture.hlsl  shaders.hlsl
demo/hello_window/: hello_window.hxx  hellow_window.cxx
demo/hellow_texture/: hellow_texture.cxx  hellow_texture.hxx  texture_helper.cxx  texture_helper.hxx
demo/hellow_triangle/: hello_triangle.cxx  hello_triangle.hxx
src/: app.cxx  app.hxx  hello_triangle.cxx  hello_triangle.hxx  hello_window.hxx  hellow_window.cxx
